--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <h1> 
             {{ message }}
         </h1>
+    <img :src="`${image}`" alt="">       
     </div>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script src="./js/script.js" type="text/javascript"></script>
