--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         <h1> 
             {{ message }}
         </h1>
-    <img :src="`${image}`" alt="">       
-    </div>
+    <img :src = image alt="">       
+    </div> 
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script src="./js/script.js" type="text/javascript"></script>
 </body>
